--- a/camerademo/src/main/AndroidManifest.xml
+++ b/camerademo/src/main/AndroidManifest.xml
@@ -20,6 +20,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".CaptureActivity" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.cs.camerademo.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
