--- a/camerademo/src/main/AndroidManifest.xml
+++ b/camerademo/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -20,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".CaptureActivity" />
+        <activity android:name=".camera1.CameraActivity" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
