--- a/CameraDemo/src/main/AndroidManifest.xml
+++ b/CameraDemo/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +23,18 @@
             </intent-filter>
         </activity>
         <activity android:name=".CaptureActivity" />
-        <activity android:name=".camera1.CameraActivity" />
+        <activity
+            android:name=".camera1.CameraActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".camera2.CameraActivity2"
+            android:launchMode="singleTask" />
+
+        <activity
+            android:name=".camera2.CameraActivity2Face"
+            android:launchMode="singleTask" />
+
+        <activity android:name=".test.TestActivity" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
