--- a/AgeraDemo/build.gradle
+++ b/AgeraDemo/build.gradle
@@ -32,11 +32,16 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation 'com.google.android.agera:agera:1.4.0'
+    implementation 'me.drakeet.retrofit2:adapter-agera:2.2.0-beta'
+
     implementation "com.squareup.okhttp3:okhttp:3.14.2"
     implementation "com.squareup.okhttp3:logging-interceptor:3.14.2"
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
+    implementation 'com.alibaba:fastjson:1.2.57'
 
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
