--- a/blacklist/src/main/AndroidManifest.xml
+++ b/blacklist/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cmos.agerademo">
+    package="com.cs.blacklist">
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+
 
     <application
         android:allowBackup="true"
@@ -21,10 +23,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".SimpleActivity" />
-        <activity android:name=".LoadImageActivity" />
-        <activity android:name=".CalculateActivity" />
-        <activity android:name=".HttpActivity" />
+        <receiver
+            android:name=".PhoneBroadcastReceiver"
+            android:enabled="true">
+            <intent-filter android:priority="1000">
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
+                <action android:name="android.intent.action.PHONE_STATE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
