--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+ext {
+    minSdkVersion = 15
+    targetSdkVersion = 28
+    compileSdkVersion = 28
+    supportVersion = '28.0.0'
+    constraintVersion = '1.1.3'
+}
+
 buildscript {
     ext.kotlin_version = '1.2.50'
 
