--- a/CameraDemo/src/main/AndroidManifest.xml
+++ b/CameraDemo/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <activity android:name=".test.TestActivity" />
 
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="com.cs.camerademo.fileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
