--- a/Architecture/src/main/AndroidManifest.xml
+++ b/Architecture/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".mvp.MvpActivity" />
         <!--<activity android:name=".mvvm.MvvmActivity"/>-->
+        <activity android:name=".jetpack.livedata.LiveDataActivity" />
         <activity android:name=".jetpack.databinding.BindingActivity" />
     </application>
 
