--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,13 @@ ext {
     compileSdkVersion = 28
     supportVersion = '28.0.0'
     constraintVersion = '1.1.3'
+
+    appcompatVersion = "1.0.2"
+    constraintlayoutVersion = "1.1.3"
 }
 
 buildscript {
-    ext.kotlin_version ='1.3.31'
+    ext.kotlin_version = '1.3.31'
 
     repositories {
         google()
