--- a/Architecture/src/main/AndroidManifest.xml
+++ b/Architecture/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".mvp.MvpActivity" />
+        <activity android:name=".mvp.MvpActivity2" />
         <!--<activity android:name=".mvvm.MvvmActivity"/>-->
         <activity android:name=".jetpack.livedata.LiveDataActivity" />
         <activity android:name=".jetpack.databinding.BindingActivity" />
