--- a/Architecture/build.gradle
+++ b/Architecture/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -26,7 +27,7 @@ android {
         targetCompatibility = '1.8'
     }
 
-    kotlinOptions{
+    kotlinOptions {
         jvmTarget = '1.8'
     }
 
@@ -38,9 +39,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:${rootProject.ext.appcompatVersion}"
-    implementation "androidx.constraintlayout:constraintlayout:${rootProject.ext.constraintlayoutVersion}"
 
     implementation project(":common")
 
@@ -49,4 +47,43 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
+
+    //协程
+    //The built-in coroutine scopes described in this topic are contained in the
+    // KTX extensions for each corresponding Architecture component.
+    // Be sure to add the appropriate dependencies when using these scopes
+
+//    For ViewModelScope, use androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-beta01 or higher.
+//    For LifecycleScope, use androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha01 or higher.
+//    For liveData, use androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha01 or higher.
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha02"
+
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:x.x.x"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:x.x.x"
+
+
+    /**
+     *  module里如果使用了kapt插件，那在加载注解生成器的时候，
+     *  必须要使用kapt '***'。使用annotationProcessor '***'是生成不了代码的
+     */
+    //room
+    def room_version = "2.2.0-alpha01"
+    implementation "androidx.room:room-ktx:$room_version"
+//    implementation "androidx.room:room-runtime:$room_version"
+
+    // For Kotlin use kapt instead of annotationProcessor
+    kapt "androidx.room:room-compiler:$room_version"
+
+
+//    // optional - Kotlin Extensions and Coroutines support for Room
+//    implementation "androidx.room:room-ktx:$room_version"
+//
+//    // optional - RxJava support for Room
+//    implementation "androidx.room:room-rxjava2:$room_version"
+//
+//    // optional - Guava support for Room, including Optional and ListenableFuture
+//    implementation "androidx.room:room-guava:$room_version"
 }
