--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:${rootProject.ext.constraintlayoutVersion}"
 
     implementation project(":common")
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
 }
