--- a/Architecture/build.gradle
+++ b/Architecture/build.gradle
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -40,6 +41,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'com.android.support:multidex:1.0.3'
     implementation project(":common")
 
     def lifecycle_version = "2.0.0"
@@ -57,9 +59,9 @@ dependencies {
 //    For LifecycleScope, use androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha01 or higher.
 //    For liveData, use androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha01 or higher.
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$rootProject.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
 
 //    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:x.x.x"
 //    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:x.x.x"
@@ -75,6 +77,7 @@ dependencies {
 //    implementation "androidx.room:room-runtime:$room_version"
 
     // For Kotlin use kapt instead of annotationProcessor
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:$room_version"
 
 
@@ -86,4 +89,18 @@ dependencies {
 //
 //    // optional - Guava support for Room, including Optional and ListenableFuture
 //    implementation "androidx.room:room-guava:$room_version"
+
+
+    //Navigation
+    def nav_version = "2.2.0-alpha01"
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //WorkManager
+    def work_version = "2.1.0"
+
+    // Kotlin + coroutines
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+
 }
