--- a/CameraDemo/build.gradle
+++ b/CameraDemo/build.gradle
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         applicationId "com.cs.camerademo"
         minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
 
