--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-ext {
-    minSdkVersion = 15
-    targetSdkVersion = 28
-    compileSdkVersion = 28
-    supportVersion = '28.0.0'
-    constraintVersion = '1.1.3'
-
-    appcompatVersion = "1.0.2"
-    constraintlayoutVersion = "1.1.3"
-}
-
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext {
+        minSdkVersion = 15
+        targetSdkVersion = 28
+        compileSdkVersion = 28
+        supportVersion = '28.0.0'
+        constraintVersion = '1.1.3'
+        kotlin_version = '1.3.31'
+
+        appcompatVersion = "1.0.2"
+        constraintlayoutVersion = "1.1.3"
+        recyclerviewVersion = "1.0.0"
+
+        navigationVersion = '2.2.0-alpha01'
+        roomVersion = '2.2.0-alpha01'
+        lifecycleVersion = '2.2.0-alpha01'
+
+        glideVersion = "4.9.0"
+
+    }
+
 
     repositories {
         google()
@@ -20,8 +28,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
