--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,7 +6,6 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
 
-
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -29,6 +28,17 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    api "androidx.core:core-ktx:1.0.2"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    api 'com.android.support:design:28.0.0'
+
+    api "androidx.appcompat:appcompat:${rootProject.ext.appcompatVersion}"
+    api "androidx.constraintlayout:constraintlayout:${rootProject.ext.constraintlayoutVersion}"
+    api "androidx.recyclerview:recyclerview:${rootProject.ext.recyclerviewVersion}"
+
+
+
     api 'com.google.android.agera:agera:1.4.0'
     api 'com.alibaba:fastjson:1.2.57'
 
@@ -39,12 +49,5 @@ dependencies {
     api 'me.drakeet.retrofit2:adapter-agera:2.2.0-beta'
 
     api 'pub.devrel:easypermissions:2.0.1'
-
-    api "androidx.core:core-ktx:1.0.2"
-    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
-    api "androidx.appcompat:appcompat:${rootProject.ext.appcompatVersion}"
-    api "androidx.constraintlayout:constraintlayout:${rootProject.ext.constraintlayoutVersion}"
-    api 'androidx.recyclerview:recyclerview:1.0.0'
 
 }
