--- a/camera/build.gradle
+++ b/camera/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
 android {
-    compileSdkVersion  rootProject.ext.compileSdkVersion
-
-
+    compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
         applicationId "com.cs.camerademo"
-        minSdkVersion 21
-        targetSdkVersion  rootProject.ext.compileSdkVersion
+        minSdkVersion 26
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -34,6 +33,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(":library_architecture")
+    implementation project(":common")
 
 }
