--- a/recyclerview/build.gradle
+++ b/recyclerview/build.gradle
@@ -33,6 +33,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(":library_architecture")
+    implementation project(":common")
 
 }
