--- a/bitmap/build.gradle
+++ b/bitmap/build.gradle
@@ -35,7 +35,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation project(':library_architecture')
+    implementation project(':common')
 
     implementation 'jp.wasabeef:glide-transformations:4.0.1'
     //如果你在 Kotlin 编写的类里使用 Glide 注解，你需要引入一个 kapt 依赖，以代替常规的 annotationProcessor 依赖：
