--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
-
     apply from: "versions.gradle"
 
-    ext {
-        minSdkVersion = 19
-        targetSdkVersion = 28
-        compileSdkVersion = 28
-        buildToolsVersion = "29.0.2"
-        supportVersion = '28.0.0'
-        constraintVersion = '1.1.3'
-        kotlin_version = '1.3.31'
-
-        appcompatVersion = "1.0.2"
-        constraintlayoutVersion = "1.1.3"
-        recyclerviewVersion = "1.0.0"
-
-        navigationVersion = '2.2.0-alpha01'
-        roomVersion = '2.2.0-alpha01'
-
-        glideVersion = "4.9.0"
-
-    }
-
+    ext.kotlin_version = '1.3.50'
 
     repositories {
         google()
@@ -34,7 +13,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
