--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,1 @@
-include ':customizeview', ':app', ':statusbar', ':camera', ':agera', ':bitmap', ':library_base', ':recyclerview', ':library_architecture'
-include ':kotlin'
+include ':customizeview', ':app', ':statusbar', ':camera', ':agera', ':bitmap', ':recyclerview', "common"
