--- a/statusbar/build.gradle
+++ b/statusbar/build.gradle
@@ -32,5 +32,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(":library_architecture")
+    implementation project(":common")
 }
